k8s-specifications/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  clusterIP: None
  ports:
    - name: db-service
      port: 5432
      targetPort: 5432
  selector:
    app: db
