k8s-specifications/vote-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: vote
#   name: vote
# spec:
#   type: NodePort
#   ports:
#   - name: "vote-service"
#     port: 8080
#     targetPort: 80
#     nodePort: 31000
#   selector:
#     app: vote
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  type: NodePort
  ports:
    - name: "vote-service"
      port: 8080
      targetPort: 80
      nodePort: 31000
  selector:
    app: vote
